--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   flutter_web_auth: ^0.5.0
   webview_flutter: ^4.4.1
   webview_flutter_android: ^3.12.0
+  localstorage: ^4.0.1+4
 
 dev_dependencies:
   flutter_test:
