--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@ CLIENT_ID=807256344858-vibjvo13976sh2nrf1mg4g7rbqhn5jjn.apps.googleusercontent.c
 CLIENT_SECRET=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
 GITHUB_CLIENT_ID=a17689a3dd94435cbb56
 GITHUB_CLIENT_SECRET=d453e5aabcea22693d52d7d6d036a0183d81e37d
-DNS_NAME=http://localhost
+DNS_NAME=http://884d1376-a185-41a0-a373-f1359376749e.pub.instances.scw.cloud
