--- a/.env
+++ b/.env
@@ -5,4 +5,4 @@ CLIENT_SECRET=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
 GITHUB_CLIENT_ID=a17689a3dd94435cbb56
 GITHUB_CLIENT_SECRET=d453e5aabcea22693d52d7d6d036a0183d81e37d
 DNS_NAME=https://are4-51.com
-NODE_ENV=prod # dev or prod (http or https)
+NODE_ENV=dev # dev or prod (http or https)
