--- a/Back/.env
+++ b/Back/.env
@@ -3,7 +3,7 @@ JWT_SECRET=mysecretkey
 CLIENT_ID=807256344858-vibjvo13976sh2nrf1mg4g7rbqhn5jjn.apps.googleusercontent.com
 CLIENT_SECRET=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
 GITHUB_CLIENT_ID=a17689a3dd94435cbb56
-DNS_NAME=http://localhost
+DNS_NAME=https://are4-51.com
 GITHUB_CLIENT_SECRET=d453e5aabcea22693d52d7d6d036a0183d81e37d
 Microsoft_CLIENT_ID=3d597da2-59ad-4fcf-bde3-f9a8f136e01f
 Microsoft_SCOPE_ID=api://3d597da2-59ad-4fcf-bde3-f9a8f136e01f/DataAccess
