feat: flutter container building apk

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,5 +39,12 @@ services:
     ports:
       - "8081:5173"
 
+  client_mobile:
+    build:
+      context: ./mobile/
+      dockerfile: Dockerfile
+    volumes:
+      - ./apk:/home/delivery
+
 networks:
   back:
