--- a/mobile/Dockerfile
+++ b/mobile/Dockerfile
@@ -3,7 +3,7 @@ FROM ghcr.io/cirruslabs/flutter:latest
 WORKDIR /home/mobile
 COPY . .
 
-RUN flutter build apk --split-per-abi
+RUN flutter build apk --release
 
 RUN mkdir ../delivery
 
