--- a/Back/.env
+++ b/Back/.env
@@ -3,8 +3,10 @@ JWT_SECRET=mysecretkey
 CLIENT_ID=807256344858-vibjvo13976sh2nrf1mg4g7rbqhn5jjn.apps.googleusercontent.com
 CLIENT_SECRET=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
 GITHUB_CLIENT_ID=a17689a3dd94435cbb56
-DNS_NAME=https://are4-51.com
+DNS_NAME=https://localhost
 GITHUB_CLIENT_SECRET=d453e5aabcea22693d52d7d6d036a0183d81e37d
 Microsoft_CLIENT_ID=3d597da2-59ad-4fcf-bde3-f9a8f136e01f
 Microsoft_SCOPE_ID=api://3d597da2-59ad-4fcf-bde3-f9a8f136e01f/DataAccess
 Microsoft_CLIENT_SECRET=X7c8Q~x6G2Rvm.d1GFTcE_QXfEIjN97VHvBM1dr.
+NOTION_CLIENT_ID=07fac9af-aecb-4800-8942-58505b1e1b44
+NOTION_CLIENT_SECRET=secret_CgBioxpRP5knEh1Kj4RO8eEKG1RxWOuP25Lvy5lrZCv
