feat: add linear service connexion oauth2

--- a/Back/.env
+++ b/Back/.env
@@ -10,3 +10,7 @@ Microsoft_SCOPE_ID=api://3d597da2-59ad-4fcf-bde3-f9a8f136e01f/DataAccess
 Microsoft_CLIENT_SECRET=X7c8Q~x6G2Rvm.d1GFTcE_QXfEIjN97VHvBM1dr.
 NOTION_CLIENT_ID=07fac9af-aecb-4800-8942-58505b1e1b44
 NOTION_CLIENT_SECRET=secret_CgBioxpRP5knEh1Kj4RO8eEKG1RxWOuP25Lvy5lrZCv
+FIGMA_CLIENT_ID=1E54LCC3X1aGU1NfwM4Loh
+FIGMA_CLIENT_SECRET=iJkJ471wq4fBA5QyUYrAZQinqblOGM
+LINEAR_CLIENT_ID=c418fc5ace3e2ad3abae2c4a6ae64f07
+LINEAR_CLIENT_SECRET=e27126a5381b6f9c9cf3eb2e3c283992
