--- a/FrontWeb/package.json
+++ b/FrontWeb/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "axios": "^1.5.0",
     "context": "^3.0.12",
+    "font-awesome": "^4.7.0",
     "fs": "^0.0.1-security",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
